# sentry-mcp

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml  requirements.txt
sentry_mcp/: __init__.py  cli.py  client.py  server.py
tests/: __init__.py  test_client.py  test_comprehensive_issues.py  test_server.py
